fix: font alignement for empty requests

--- a/friends_requests.css
+++ b/friends_requests.css
@@ -38,16 +38,6 @@
 	text-shadow: 2px 2px 2px #684a2b;
 }
 
-.req-empty-text {
-	height: 100%;
-	display: flex;
-	align-items: center;
-	font-size: large;
-	overflow: hidden;
-	white-space: nowrap;
-	text-shadow: 2px 2px 2px #684a2b;
-}
-
 .req-accept-button
 {
 	height: 80%;
@@ -90,7 +80,7 @@
 	overflow: hidden;
 	background-color: #ca2530;
 	border: thin solid rgb(54, 54, 54);
-	text-shadow: 1px 1px 3px #631318;
+	text-shadow: 1px 1px 2px #7c181e;
 	box-shadow: 1px 1px 1px #5c4326;
 }
 
